# Kurnik-2

./: .gitignore  Jenkinsfile  README.md  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json
backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/src/psi_backend/: app.py  db.py  message.py
backend/src/psi_backend/database/: db.py  message.py  user.py
backend/src/psi_backend/routes/: auth.py  ws.py
backend/src/psi_backend/tictactoe/: game.py
backend/src/psi_backend/utils/: auth_utils.py
backend/src/psi_backend/websocket_chat/: room_assignment.py
backend/tests/: test_app.py  test_message.py
backend/tests/database/: test_message.py  test_user.py
backend/tests/routes/: test_ws.py
backend/tests/tictactoe/: test_tictactoe.py
backend/tests/websocket_chat/: test_room_assignment.py
deployment/: Dockerfile.jenkins-ssh-agent  ansible.cfg  auth-docker.yaml  backup-ci-cd-vm.sh  install-docker.yaml  inventory.ini  jenkins-docker.yaml  jenkins.yaml  nexus.yaml  nginx.yaml  restore-volume-backup.sh  site.yaml  users.yaml
deployment/azure/: .gitignore  main.tf  outputs.tf  provision-infra.sh  ssh-keys  terraform.tfstate  terraform.tfstate.backup  variables.tf
deployment/jenkins/: Dockerfile  jenkins.yaml
deployments/: install-docker.yaml  nexus.yaml
frontend/: .env.development  .env.production  .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  jest.config.js  nginx.local.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+40 files in other folders)
